# perpetual_predict

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  experiments.json  meta.json  metrics.json  predictions.json  pyproject.toml  ralph.sh  trades.json
.claude/agents/: predictor.md
.github/workflows/: collect-data.yml
.ralph/: .gitignore
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  constants.ts
data/: scheduler_status.json
deploy/: com.perpetual-predict.plist  setup-launchd.sh
docs/: MANUAL_COLLECTOR_GUIDE.md  PHASE2_TEST_GUIDE.md  pipeline-evaluation.md  reasoning-strategy-experiment.md
perpetual_predict/: __init__.py  __main__.py
perpetual_predict/analyzers/: __init__.py
perpetual_predict/cli/: __init__.py  collect.py  cycle.py  daemon.py  experiment.py  export.py  report.py
perpetual_predict/collectors/: __init__.py  base_collector.py
perpetual_predict/config/: __init__.py  settings.py
perpetual_predict/experiment/: __init__.py  analyzer.py  models.py
perpetual_predict/export/: __init__.py  exporter.py
perpetual_predict/llm/: __init__.py
perpetual_predict/notifications/: __init__.py  alerts.py  discord_webhook.py  scheduler_alerts.py  telegram_bot.py
perpetual_predict/reporters/: __init__.py  data_integrity.py  discord_report.py  markdown_generator.py
perpetual_predict/scheduler/: __init__.py  health.py  (+2 more)
scripts/: deploy-gcloud.sh  e2e_test.py  push_dashboard_data.sh  test_collectors.py
tests/: __init__.py  test_config.py  test_logger.py  test_retry.py  test_storage.py
(+128 files in other folders)
