[project]
name = "perpetual-predict"
version = "0.1.0"
description = "Cryptocurrency futures prediction system for BTCUSDT.P on 4H timeframes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "pandas>=2.1.0",
    "pandas-ta>=0.3.14b",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
perpetual-predict = "perpetual_predict.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["perpetual_predict"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
